# sally

./: .gitignore  Cargo.toml  example-q.sq  example-tpn.json  profile-perf.sh  readme.md
src/: computation.rs  dbm.rs  electronics.rs  game.rs  io.rs  learning.rs  lib.rs  log.rs  main.rs  models.rs  solution.rs  translation.rs  verification.rs
src/computation/: action_set.rs  bit_set.rs  combinatory.rs  dbm.rs  delta_list.rs  disjoint_interval.rs  fix_point.rs  intervals.rs  probability.rs  virtual_memory.rs
src/electronics/: code_translator.rs
src/game/: arena.rs  strategy.rs
src/io/: sly.rs  tapn.rs
src/learning/: genetic.rs  logic_2d.rs
src/models/: action.rs  beliefs_graph.rs  caching.rs  class_graph.rs  computation_tree.rs  digraph.rs  edge.rs  expressions.rs  label.rs  markov.rs  markov_chain.rs  model_clock.rs  model_const.rs  model_context.rs  model_network.rs  model_param.rs  model_project.rs  model_solving_graph.rs  model_state.rs  model_storage.rs  model_var.rs  naming_context.rs  node.rs  observation.rs  petri.rs  program.rs  run.rs  tapn.rs  time.rs  timed_automata.rs  translation.rs  word.rs
src/models/class_graph/: state_class.rs
src/models/digraph/: search_strategy.rs
src/models/markov/: ct_markov_node.rs  ctmc.rs  markov_chain.rs  markov_node.rs
src/solution/: class_graph_reachability.rs  class_graph_reachability_synthesis.rs
src/translation/: chain.rs  observation.rs  petri_class_graph.rs  petri_partial_observation.rs
src/verification/: query.rs  query_grammar.pest  smc.rs  text_query_parser.rs  verification_iterator.rs  verifier.rs
(+22 files in other folders)
