[package]
name = "sally-mc"
version = "0.1.0"
edition = "2021"

[profile.profiling]
inherits = "release"
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
nalgebra = { version = "0.32.5", features = ["serde-serialize"] }
num-traits = "0.2.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
pest = "2.7.9"
pest_derive = "2.7.9"
lazy_static = "1.4.0"